# TheShortNamedNonOfficialCPPDesingPatternsHandbookReferenceRepository

./: .gitignore  README.md
decorator/: README.md
decorator/example1/: CMakeLists.txt  main.cpp
decorator/example2/: CMakeLists.txt  main.cpp
factory/: README.md
factory/example1/: CMakeLists.txt  client.hpp  creator_1.hpp  creator_2.hpp  i_creator.hpp  i_product.hpp  main.cpp  product_1.hpp  product_2.hpp
factory/example2/: CMakeLists.txt  boat_object.hpp  factory_game_objects.hpp  i_game_object.hpp  main.cpp  plane_object.hpp
factory/example3/: CMakeLists.txt  game_object_boat.cpp  game_object_boat.hpp  game_object_factory.cpp  game_object_factory.hpp  game_object_plane.cpp  game_object_plane.hpp  level_file.txt  main.cpp
policy/: README.md
policy/example1/: CMakeLists.txt  main.cpp
